<resources>
    <string name="app_name">FinalAppMobile</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="home_blank_fragment">Minh ngu</string>
    <string name="file_blank_fragment">Minh dan</string>
    <string name="image_blank_fragment">Minh ngu vcl</string>
    <string name="video_blank_fragment">minh ngu nhi</string>
    <string name="profile_blank_fragment">Minh </string>
</resources>